<resources>
    <string name="app_name">um</string>
    <string name="bai1"><![CDATA[Cho hàm số y=f(x),khiđó: +) f′(x)>0 trên khoảng nào thì hàm số đồng biến trên khoảng đó. +)f′(x)<0trên khoảng nào thì hàm số nghịch biến trên khoảng đó. Điều kiện để hàm số đồng biến, nghịch biến trên khoảng (a;b) +) Để hàm số đồng biến trên khoảng (a,b) thì f′(x)≥0,∀x∈(a,b). +) Để hàm số nghịch biến trên khoảng (a,b) thì f′(x)≤0,∀x∈(a,b).]]></string>
    <string name="bai2"><![CDATA[Dấu hiệu 1: +) Nếu f ′ ( x 0 ) = 0 hoặc f ′ ( x ) không xác định tại x 0 và nó đổi dấu từ dương sang âm khi qua x 0 thì x 0 là điểm cực đại của hàm số. +) Nếu f ′ ( x 0 ) = 0 hoặc f ′ ( x ) không xác định tại x 0 và nó đổi dấu từ âm sang dương khi qua x 0 thì x 0 là điểm cực tiểu của hàm số. *) Quy tắc 1: (dựa vào dấu hiệu 1) +) Tính y ′ +) Tìm các điểm tới hạn của hàm số. (tại đó y ′ = 0 hoặc y ′ không xác định) +) Lập bảng xét dấu y ′ và dựa vào bảng xét dấu và kết luận. Dấu hiệu 2: Cho hàm số y = f ( x ) có đạo hàm đến cấp 2 tại x 0 . +) x 0 là điểm cực đại ⇔ { f ′ ( x 0 ) = 0 f ′′ ( x 0 ) < 0 +) x 0 là điểm cực tiểu ⇔ { f ′ ( x 0 ) = 0 f ′′ ( x 0 ) > 0 *) Quy tắc 2: (dựa vào dấu hiệu 2) +) Tính f ′ ( x ) , f ′′ ( x ) . +) Giải phương trình f ′ ( x ) = 0 tìm nghiệm. +) Thay nghiệm vừa tìm vào f ′′ ( x ) và kiểm tra, từ đó suy kết luận.]]></string>
    <string name="bai3">Quy tắc tìm GTLN – GTNN của hàm số: *) Quy tắc chung: (Thường dùng cho D là một khoảng) - Tính f ′ ( x ) , giải phương trình f ′ ( x ) = 0 tìm nghiệm trên D . - Lập BBT cho hàm số trên D . - Dựa vào BBT và định nghĩa từ đó suy ra GTLN, GTNN. *) Quy tắc riêng: (Dùng cho [ a ; b ] ) . Cho hàm số y = f ( x ) xác định và liên tục trên [ a ; b ] - Tính f ′ ( x ) , giải phương trình f ′ ( x ) = 0 tìm nghiệm trên [ a , b ] . - Giả sử phương trình có các nghiệm x 1 , x 2 , . . . ∈ [ a , b ] . - Tính các giá trị f ( a ) , f ( b ) , f ( x 1 ) , f ( x 2 ) , . . . . - So sánh chúng và kết luận.</string>
    <string name="bai4">+) Đường thẳng x = a là TCĐ của đồ thị hàm số y = f ( x ) nếu có một trong các điều kiện sau: lim x → a + y = + ∞ hoặc lim x → a + y = − ∞ hoặc lim x → a − y = + ∞ hoặc lim x → a − y = − ∞ +) Đường thẳng y = b là TCN của đồ thị hàm số y = f ( x ) nếu có một trong các điều kiện sau: lim x → + ∞ y = b hoặc lim x → − ∞ y = b</string>
    <string name="bai41">a) Số phức z là biểu thức có dạng ( ) 2 z a bi a b R i = + ∈ =− ,, 1 . Khi đó: + Phần thực của z là a , phần ảo của z là b và i được gọi là đơn vị ảo. b) Số phức liên hợp của z là z a bi a bi =+ =− . + 2 2 zz a b . = + + Tổng và tích của z và z luôn là một số thực. + zz zz 12 12  . + zz zz 12 12 . .  . + z z z z             1 1 2 2 . Đặc biệt: + Số phức za i = + 0 có phần ảo bằng 0 được coi là số thực và viết là z a = + Số phức z bi = + 0 có phần thực bằng 0 được gọi là số ảo (hay số thần ảo) và viết là + Số i ii =+ = 01 1 . + Số: 000 = + i vừa là số thực vừa là số ảo. * Lưu ý: ;; ; nn n n i i ii i i       4 41 42 43 1 1 ; với n N  .</string>
    <string name="b42"><![CDATA[+ Cho hai số phức 1 11 z a bi = + , 2 22 z a bi = + (aabb R 1222 ,,, ∈ ) . Khi đó: z1=z2--> a1 =a2 ; b1= b2]]></string>
    <string name="b43">a) Biễu diễn hình học của số phức. + Số phức z a bi a b R =+ ∈ ( , ) được biểu diễn bởi điểm M ab ( ; ) trong mặt phẳng tọa độ. + z và z được biểu diễn bởi hai điểm đối xứng nhau qua trục Ox . b) Mô đun của số phức. + Mô đun của số phức z là 2 2 z OM a b = = +  . + z zz = . ; z z = .</string>
    <string name="b433">a) Biễu diễn hình học của số phức. + Số phức z = a + bi (a, b ∈ R) được biểu diễn bởi điểm M(a; b) trong mặt phẳng tọa độ. + z và z− được biểu diễn bởi hai điểm đối xứng nhau qua trục 0x. b) Mô đun của số phức. + Mô đun của số phức z là</string>
    <string name="hinhhocc1">Khối lăng trụ(chóp) là phần không gian được giới hạn bởi một hình lăng trụ(chóp) kểcảhình lăng trụ(chóp) ấy. Khối chóp cụt là phần không gian được giới hạn bởi một hình chóp cụt kểcảhình chóp cụt ấy.Điểm không thuộc khối lăng trụ(khối chóp, khối chóp cụt) được gọi là điểm ngoài của khối lăng trụ(khối chóp, khối chóp cụt). Điểm thuộc khối lăng trụnhưng không thuộc hình lăng trụứng với khối lăng trụ(khối chóp, khối chóp cụt) đó được gọi là điểm trong của khối lăng trụ(khối chóp, khối chóp cụt).</string>
    <string name="hinhhocc2">2.1.Khái niệm về hình đa diện.Hình đa diện (gọi tắt là đa diện) là hình được tạo bởi một sốhữu hạn các đa giác thỏa mãn hai tính chất:Hai đa giác phân biệt chỉcó thểhoặc không cóđiểm chung, hoặc chỉcó một đỉnh chung, hoặc chỉcó một cạnh chung.Mỗi cạnh của đa giác nào cũng là cạnh chung của đúng hai đa giác.Mỗi đa giác gọi là một mặt của hình đa diện. Các đỉnh, cạnh của các đa giác ấy theo thứtựđược gọi là các đỉnh, cạnh củahình đa diện.2.2. Khái niệm về khối đa diệnKhối đa diện là phần không gian được giới hạn bởi một hình đa diện, kểcảhình đa diện đó.ABCDEFF\'E\'D\'C\'B\'A\'CDABSMN Những điểm không thuộc khối đa diện được gọi là điểm ngoài của khối đa diện. Những điểm thuộc khối đa diện nhưng không thuộc hình đa diện đó được gọi là điểm trong của khối đa diện. Tập hợp các điểm trong được gọi là miền trong, tập hợp những điểm ngoài được gọi là miền ngoài của khối đa diện.Mỗi hình đa diện chia các điểm còn lại của không gian thành hai miền không giao nhau là miền trong và miền ngoài của hình đa diện, trong đó chỉcó miền ngoài là chứa hoàn toàn một đường thẳng nào đó</string>
</resources>