<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KienThuc.C1DaiSo"
    android:background="@color/cam">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="657dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/colorItem3End"
                android:text="1.Sự đồng biến nghịch biến của hàm số"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/bai1"
                android:textColor="@color/black"
                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/colorItem3End"
                android:text="2.Cực trị của hàm số"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="164dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/bai2"
                android:textColor="@color/black"
                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/colorItem3End"
                android:text="3.Giá trị lớn nhất và giá tị nhỏ nhất của hàm số"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="164dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/bai3"
                android:textColor="@color/black"
                android:textSize="15dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:textColor="@color/colorItem3End"
                android:text="4. Tiệm cận của đồ thị hàm số"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="164dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/bai4"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:onClick="dahieu"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="Đọc xong"
        android:textStyle="bold"
        android:background="#03A9F4"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="6dp" />
</RelativeLayout>